# windows-agent

./: .gitignore  CMakeLists.txt  README.md
examples/: example_output.json
src/: inventory.cpp  inventory.h  json_builder.cpp  json_builder.h  main.cpp  portable_scanner.cpp  portable_scanner.h  registry_scanner.cpp  software_entry.h  uwp_scanner.cpp  uwp_scanner.h
src/execution_monitor/: run_execution_monitor.cpp  run_execution_monitor.h  types.h
src/execution_monitor/etw/: etw_session_manager.cpp  etw_session_manager.h  event_parser.cpp  event_parser.h
src/execution_monitor/output/: jsonl_writer.cpp  jsonl_writer.h
src/execution_monitor/utils/: thread_safe_queue.h
src/helper/: json_exporter.cpp  normalizer.cpp
src/orchestration/: scan_menu.cpp  scan_menu.h  scan_plan.h
src/scanners/: autorun_scanner.cpp  autorun_scanner.h  scanner_factory.cpp  scanner_factory.h  service_scanner.cpp  service_scanner.h
web-ui/: README.md  app.js  index.html  styles.css
